--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,10 @@
 		"**/node_modules/**": true,
 		"{Client,Server}/out/**": true,
 	},
+	"editor.codeActionsOnSave": {
+		"source.organizeImports": "explicit",
+		"source.fixAll.eslint": "explicit",
+	},
 	"typescript.format.enable": true,
 	"typescript.format.semicolons": "insert",
 	"typescript.preferences.importModuleSpecifier": "relative",
