--- a/Client/package.json
+++ b/Client/package.json
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"classnames": "^2.5.1",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@types/node": "^22.10.5",
