--- a/Server/package.json
+++ b/Server/package.json
@@ -12,9 +12,18 @@
 		"clean": "rimraf out"
 	},
 	"devDependencies": {
+		"@types/express": "^5.0.0",
+		"@types/lodash-es": "^4.17.12",
 		"@types/node": "^22.10.5",
 		"rimraf": "^6.0.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.2"
+	},
+	"dependencies": {
+		"argon2": "^0.41.1",
+		"express": "^5.0.1",
+		"lodash-es": "^4.17.21",
+		"nanoid": "^5.0.9",
+		"zod": "^3.24.1"
 	}
 }
