--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
 		"clean": "rimraf out"
 	},
 	"dependencies": {
+		"@simplewebauthn/browser": "^13.0.0",
 		"classnames": "^2.5.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
