--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
 		"typescript": "^5.7.2"
 	},
 	"dependencies": {
+		"@simplewebauthn/server": "^13.0.0",
 		"argon2": "^0.41.1",
 		"express": "^5.0.1",
 		"lodash-es": "^4.17.21",
