Add deployment script

--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -4,8 +4,8 @@
 		"noEmit": false,
 		"outDir": "./out",
 		"rootDir": "./src",
-		"declaration": true,
-		"declarationMap": true,
+		"declaration": false,
+		"declarationMap": false,
 		"composite": false,
 		"resolveJsonModule": true,
 		"moduleResolution": "bundler",
