--- a/Client/package.json
+++ b/Client/package.json
@@ -5,6 +5,9 @@
 	"author": "Michal Pácal",
 	"license": "UNLICENSED",
 	"type": "module",
+	"files": [
+		"/out/**/*"
+	],
 	"scripts": {
 		"build": "cross-env NODE_OPTIONS=\"--loader ts-node/esm\" TS_NODE_PROJECT=\"tsconfig.webpack.json\" webpack --env prod --fail-on-warnings --progress",
 		"dev": "cross-env NODE_OPTIONS=\"--loader ts-node/esm\" TS_NODE_PROJECT=\"tsconfig.webpack.json\" webpack serve --progress",
